--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,25 @@ pic_aboutme/P1790805-Pano.jpg
 downloadableContent/github/
 
 downloadableContent/
+
+pic_home/arthurvanstrienpuntnl.PNG
+
+pic_projects/arthurvanstrienpuntnl-load.PNG
+
+pic_projects/arthurvanstrienpuntnl-json.PNG
+
+pic_home/P1870745.jpg
+
+pic_home/aboutme_P1870745.jpg
+
+pic_home/projects_P1890540.jpg
+
+pic_home/projects_arthurvanstrienpuntnl.PNG
+
+pic_home/photography_P1750035.jpg
+
+pic_home/photography_IMGP9907.jpg
+
+pic_home/photography_IMGP9831.jpg
+
+pic_home/photography_IMGP0165.jpg
