Added images to the LED Shoes project.

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@ pic_home/photography_IMGP9907.jpg
 pic_home/photography_IMGP9831.jpg
 
 pic_home/photography_IMGP0165.jpg
+
+pic_projects/arthurvanstrienpuntnl.PNG
+
+pic_projects/
