Removed Seperate Hashgenerator project from the website project.

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,9 @@ pic_projects/
 pic_404/tornado.jpg
 
 pic_engineer-tech/
+
+000_DO_NOT_UPLOAD_Content/Website_LowRes/
+
+000_DO_NOT_UPLOAD_Content/Website_HighRes/
+
+000_DO_NOT_UPLOAD_Content/HashGenerator/
